corrections to table content alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-   td {
+   #employee-table {
       text-align: center;
    } 
 
